...
            
            GroupBox {
                Button("Search") {
                    vm.performSearch()
                    keyboardFocused = false
                }
                .accessibilityIdentifier("searchForPerson")
                .buttonStyle(.borderedProminent)
                .padding(.vertical, 5) // this evenly places the search button from the search box
                
                TextField("Enter Person Name", text: $vm.query)
                    .textFieldStyle(.roundedBorder)
                    .padding(.bottom, 40)
                    .focused($keyboardFocused)
                    
            }
            .backgroundStyle(.ultraThinMaterial)
...
