...
                 
            Button {
                viewModel.showingCompare = true
            } label: {
                Text("Find out")
            }
            .accessibilityIdentifier("Compare")
            .buttonStyle(.borderedProminent) // signifies main action user should take
            .disabled(viewModel.person1 == nil || viewModel.person2 == nil)
        }
        .frame(maxHeight: .infinity, alignment: .top)
        .sheet(isPresented: $viewModel.searchForPerson1) {
            SearchPersonView(selectedPerson: $viewModel.person1)
...
